--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,7 @@ h1,h2,h3,h4 {
     line-height: 1.4;
 }
 /* custome style */
+.search-box input:focus,
+.search-box button:focus {
+    box-shadow: none;
+}
