--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,19 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #6C6C6C;
+    color: #3d3d3d;
 }
 h1,h2,h3,h4 {
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1.4;
 }
 /* custome style */
 .search-box input:focus,
 .search-box button:focus {
     box-shadow: none;
+}
+#search-result .card img {
+    max-height: 200px;
+    width: auto;
+    margin: 0 auto;
 }
