--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,9 @@ h1,h2,h3,h4 {
     max-width: 200px;
     height: auto;
 }
+#spinner {
+    display: none;
+    width: 300px;
+    height: 300px;
+    margin: 50px auto;
+}
